# ml-portal

./: .dockerignore  .env  .env.dev  .env.test  .gitignore  ADMIN_GUIDE.md  AGENT_ENTITIES.md  BACKEND_AUDIT_REPORT.md  CLEANUP_2024_11.md  CONTRACT_AWARE_EDITOR_PLAN.md  CONTRACT_BACKEND_ANALYSIS.md  COVERAGE_IMPROVEMENT_REPORT.md  CRITICAL_FIXES_REPORT.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_V2.md  DEV_SETUP_GUIDE.md  EMBEDDING_SYSTEM.md  FINAL_TEST_REPORT.md  MIGRATION_RSA_KEYS.md  MODEL_REGISTRY_REFACTOR.md  Makefile  New_plan.md  PERIODIC_TASKS.md  PLAN_AGENT_NEEDS_CONTRACT.md  PLAN_INSPECTOR.md  PLAN_PAUSE_RESUME.md  PLAN_PAUSE_RESUME_FIX.md  PROJECT_ARCHITECTURE.md  QUICK_START.md  QUICK_START_EMBEDDING.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REFACTOR_COMPLETE_SUMMARY.md  REFACTOR_V3_NOTES.md  SANDBOX_TZ.md  SECURITY_IMPROVEMENTS.md  TEMPLATE_CONTRACT_PLAN.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  (+53 more)
apps/api/: .coveragerc  .env.test.example  Makefile  alembic.ini  pyproject.toml  pytest.ini  pytest_enhanced.ini  requirements-test.txt  requirements.txt  wait_for_api.py
apps/api/scripts/: bootstrap_models_bucket.py  bootstrap_qdrant.py  create_admin_hash.py
apps/api/src/app/: README_PROD_FOUNDATION.md  __init__.py  alembic.ini  celery_app.py  dev.db  main.py  main_enhanced.py  reset_password_temp.py
apps/api/src/ml_portal_monorepo.egg-info/: PKG-INFO  SOURCES.txt
apps/api/tests/: README.md  conftest.py  conftest_enhanced.py  factories.py  seed_test_data.py  test_auth.py  test_chats_cursor_pagination.py  test_connectors.py  test_connectors_simple.py  test_errors_security.py  test_rag.py  test_rag_api.py  test_rag_search.py  test_rate_limit_idempotency.py  test_rbac.py  test_services_enhanced.py  test_services_enhanced_fixed.py  test_sse_chat.py  test_system_llm_executor.py  test_system_llm_trace_service.py
apps/api/tests/api/: test_auth_endpoints.py  test_chats_cursor_pagination.py  test_chats_endpoints.py  test_chats_endpoints_unified.py  test_errors_security.py  test_rag_endpoints.py  test_rag_endpoints_unified.py  test_rag_progress.py  test_rag_search.py  test_rag_search_next_offset.py  test_rag_search_payload.py  test_rbac.py  (+4 more)
(+2831 files in other folders)
